# Rust-crypto-pipeline-task

./: .env  Cargo.toml  README.md
src/: globals.rs  lib.rs  main.rs  utils.rs
src/generator/: default_generator.rs  generator_config.rs  mod.rs
src/models/: mod.rs  storage_models.rs  users_models.rs
src/pipeline/: default_pipeline.rs  mod.rs
src/storage/: storage.rs
src/traits/: calculate_user_stats_trait.rs  mod.rs  storage_trait.rs  transfer_trait.rs
tests/: mod.rs
tests/clickhouse_tests/: tests.rs
tests/generator_tests/: tests.rs
tests/pipeline_tests/: tests.rs
