[package]
name = "rust_challenge"
version = "0.1.0"
edition = "2021"

[dependencies]
clickhouse = "0.7"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
chrono = "0.4"
async-trait = "0.1.88"
tokio = { version = "1.45.1", features = ["full"] }
dotenv = "0.15"
uuid = { version = "1.3", features = ["v4", "fast-rng"] }
once_cell = "1.17"

[lib]
name = "mycrate"
path = "src/lib.rs"